assets/sass/partial/_container.sass
.amp
  font-family: Vidaloka

.left
  display: block
  float: left

.row
  @extend .left
  width: 100%

.stats
  .stat
    +transition(width 250ms, height 250ms)
    @extend .left
    height: 150px
    padding-right: 75px
    width: 33.3%

    &.stat-middle
      opacity: .8

    &.stat-light
      opacity: .7

    h4
      font-style: italic

      &:before
        content: 'Exp: '
        font-style: normal

    +small
      width: 50%
      height: 100px

    +xsmall
      width: 100%
      height: auto

.works
  .work
    +transition(width 250ms)
    @extend .left
    width: 50%
    height: 180px
    border: none
    overflow: hidden

    +xsmall
      width: 100%
      margin-bottom: 10px

    .holder
      display: block
      position: relative
      width: 100%
      height: 180px

    .bg
      +transition(filter 200ms)
      display: block
      position: absolute
      width: 100%
      height: 100%

    &.work-radian
      .bg
        background: image-url('radian.jpg')

    &.work-pandora
      .bg
        background: image-url('pandora.jpg')

    &.work-skystore
      .bg
        background: image-url('skystore.jpg')

    &.work-bbh
      .bg
        background: image-url('bbh.jpg')

    .hover
      +transition(opacity 250ms, transform 200ms)
      +rotate(45deg)
      display: block
      position: absolute
      width: 100%
      height: 100%
      background: #222
      background: rgba(34, 34, 34, .8)
      opacity: 0
      text-align: center
      padding-top: 81px

      &:after
        content: ' »'

    &:hover
      .bg
        +filter(blur(5px))

      .hover
        +rotate(0deg)
        opacity: 1

*
  +box-sizing(border-box)
  color: #f8f8f8
  font-family: Helvetica, sans-serif

html,
body
  background: #222

a
  +transition(color 100ms)
  text-decoration: none

  &:link,
  &:visited
    border-bottom: 1px solid #fff

  &:hover,
  &:active
    border: 0
    color: #0066C1

h1
  +transition(opacity 100ms)
  display: block
  letter-spacing: -2px
  line-height: normal
  margin: 0
  width: 100%
  opacity: .85

  a
    border: 0 !important

  &:first-child
    opacity: 1

  &:last-of-type
    opacity: .75
    letter-spacing: 0

  &:hover
    opacity: 1

  &:nth-child(1)
    font-size: 153px

  &:nth-child(2)
    font-size: 74px

  &:nth-child(3)
    font-size: 66px

  &:nth-child(4)
    font-size: 82px

  &:nth-child(5)
    font-size: 89px

  &:nth-child(6)
    font-size: 67px

  &:nth-child(7)
    font-size: 40px

  +small
    &:nth-child(1)
      font-size: 19.4vw

    &:nth-child(2)
      font-size: 9.4vw

    &:nth-child(3)
      font-size: 8.4vw

    &:nth-child(4)
      font-size: 10.5vw

    &:nth-child(5)
      font-size: 11.4vw

    &:nth-child(6)
      font-size: 8.5vw

    &:nth-child(7)
      font-size: 4.9vw

h2
  @extend .left
  color: #fff
  margin-top: 2em
  width: 100%

  &:first-of-type
    margin-top: 0

hr
  +transition(margin 250ms)
  display: block
  border: 0
  border-top: 1px solid #fff
  margin: 60px auto
  opacity: .25

  +small
    margin: 40px auto

  +xsmall
    margin: 20px auto

p,
li
  line-height: 1.5em

#container
  +transition(margin 250ms)
  display: block
  position: relative
  max-width: 780px
  padding: 0 10px
  margin: 40px auto

  +xsmall
    margin: 20px auto

